# CyberCraft_TestAssignment

./: .coveragerc  .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_check.py
.github/workflows/: django.yml
gh_repos/: asgi.py  urls.py  views.py  wsgi.py
gh_repos/settings/: common.py  development.py  production.py
gh_repos/staticfiles/: staticfiles.json
gh_repos/templates/: base.html  index.html  repos.html
gh_repos/tests/: test_init.py
repos/: github.py  urls.py  views.py
tests/: tests.py
tests/fixtures/: expected_empty_repo_list.json  expected_responce.json
tests/fixtures/expected/: owner_has_no_nodes.json  owner_has_nodes.json
tests/fixtures/mocked_responces/: owner_has_no_nodes.json  owner_has_nodes.json
