[tool.poetry]
name = "cybercraft_testassignment"
version = "0.1.0"
description = ""
authors = ["Artem Stepanenko <artem@stepanenko.one>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
rollbar = "^0.15.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
django-pytest = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
