[tool.poetry]
name = "cybercraft_testassignment"
version = "0.1.0"
description = ""
authors = ["Artem Stepanenko <artem@stepanenko.one>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.6"
rollbar = "^0.15.2"
python-dotenv = "^0.15.0"
pytest-cov = "^2.11.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
